Overhaul font-size mixin, change value to rems
This updates computed font sizes to more closely match modular scale values.

--- a/source/assets/stylesheets/components/_button.sass
+++ b/source/assets/stylesheets/components/_button.sass
@@ -13,6 +13,7 @@
 // *************************************
 
 .btn
+  +font-size( ( b: $btn-fontSize ) )
   background: $btn-background
   border-radius: $btn-borderRadius
   border: 0
@@ -20,7 +21,6 @@
   cursor: pointer
   display: inline-block
   font-family: $b-fontFamily-mono
-  font-size: $btn-fontSize
   font-weight: bold
   letter-spacing: 2px
   line-height: $btn-height
