--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -114,12 +114,9 @@ $b-fontFamily: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'A
 $b-fontFamily-heading: $b-fontFamily
 $b-fontFamily-mono: 'Source Code Pro', 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
-$b-fontSize-b: 20px
-$b-fontSize-xs: 60%
-$b-fontSize-s: 75%
-$b-fontSize-m: 90%
-$b-fontSize-l: 115%
-$b-fontSize-xl: 150%
+$b-fontSize--m: 20px
+$b-fontSize-s: 14px
+$b-fontSize-s--m: 16px
 $b-lineHeight: 1.5
 
 // ----- Sizing ----- //
@@ -144,7 +141,7 @@ $btn-borderRadius: 0
 
 // Typography
 
-$btn-fontSize: $b-fontSize-s
+$btn-fontSize: 16px
 
 // Sizing
 
