--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -235,9 +235,7 @@
 // ----- Size ----- //
 
 .tss
-  font-size: $b-fontSize-s
-.tsl
-  font-size: $b-fontSize-l
+  +font-size-s
 
 // ----- Style ----- //
 
