--- a/source/assets/stylesheets/structures/_figure.sass
+++ b/source/assets/stylesheets/structures/_figure.sass
@@ -16,8 +16,8 @@
 // ----- Caption ----- //
 
 .figure-caption
+  +font-size-s
   color: $c-subdue
-  font-size: $b-fontSize-s
   font-style: italic
   text-align: center
 
