--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -6,8 +6,8 @@
 // *************************************
 
 .label
+  +font-size-s
   color: $label-color
-  font-size: $b-fontSize-s
   font-family: $b-fontFamily-mono
   font-weight: bold
   letter-spacing: em( 2px )
