--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -15,10 +15,7 @@ html
   word-spacing: em( 1px )
 
 body
-  font-size: 100%
-
-  +respond-to( $g-m )
-    +font-size( $b-fontSize-b )
+  +font-size( ( m: $b-fontSize--m ) )
 
 // -------------------------------------
 //   Block Content
@@ -50,22 +47,10 @@ h4, .h4
   text-transform: uppercase
 
 h1, .h1
-  font-size: 160%
-
-  +respond-to( $g-m )
-    font-size: 225%
-
-  +respond-to( $g-l )
-    font-size: 340%
+  +font-size( ( b: 30px, m: 45px, l: 68px ) )
 
 h2, .h2
-  font-size: 120%
-
-  +respond-to($g-m)
-    font-size: 150%
-
-h3, .h3
-  font-size: 100%
+  +font-size( ( b: 20px, m: 30px ) )
 
 // -------------------------------------
 //   Inline Content
