Replace CDN jQuery with local vendor file

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -1,4 +1,4 @@
-= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'
+= javascript_include_tag 'vendor'
 = javascript_include_tag 'application'
 
 :javascript
