Add heavyMetal palette variable

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -26,6 +26,7 @@ $black: #000
 // Gray - dark to light
 
 $shark: #222
+$heavyMetal: #2c2c2c
 $masala: #3c3b3d
 $quill: #e2e2e0
 
@@ -69,7 +70,7 @@ $row--b-background: $majesty
 
 // Sector
 
-$sector-item--a-background: lighten( $shark, 4% )
+$sector-item--a-background: $heavyMetal
 $sector-item--b-background: $shark
 $sector-item--a--invert-background: $c-background
 $sector-item--b--invert-background: darken( $c-background, 5% )
