Convert Row gutter widths to pixel values

--- a/source/assets/stylesheets/components/_row.sass
+++ b/source/assets/stylesheets/components/_row.sass
@@ -14,7 +14,7 @@
 
 .row
   overflow: hidden
-  padding: 0 $b-space-s
+  padding: 0 $row-gutter
 
   +respond-to( $g-m )
-    padding: 0 $b-space
+    padding: 0 $row-gutter--m
