--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -193,6 +193,11 @@ $pillar-border: $b-border
 
 $pillar-space: $b-space
 
+// ----- Row ----- //
+
+$row-gutter: 10px
+$row-gutter--m: 20px
+
 // ----- Split ----- //
 
 $split-space: $b-space-s
