Darken and responsively position Syntax blocks

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -91,7 +91,7 @@ $link--inverted--state-color: rgba( $link--inverted-color, 0.5 )
 
 // Syntax
 
-$syntax-background: darken( $c-background, 5% )
+$syntax-background: $heavyMetal
 
 // -------------------------------------
 //   Base
