Convert Grid and Row pixel units to rems

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -166,7 +166,7 @@ $g-l: em( 1200px )
 
 $g-columns: 3
 $g-breakpoints: ( s: $g-s, m: $g-m, l: $g-l )
-$g-gutter: 20px
+$g-gutter: rem( 20px )
 $g-silent: false
 
 // Selector Type
@@ -195,8 +195,8 @@ $pillar-space: $b-space
 
 // ----- Row ----- //
 
-$row-gutter: 10px
-$row-gutter--m: 20px
+$row-gutter: rem( 10px )
+$row-gutter--m: rem( 20px )
 
 // ----- Split ----- //
 
