Change syntax colors to Base 16 Tomorrow's

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -91,7 +91,13 @@ $link--inverted--state-color: rgba( $link--inverted-color, 0.5 )
 
 // Syntax
 
-$syntax-background: $heavyMetal
+$syntax-background: $shark
+$syntax-color: #e0e0e0 // White
+$syntax-comment-color: #969896 // Gray
+$syntax-constant-color: #ca6768 // Red
+$syntax-keyword-color: #b195ba // Purple
+$syntax-string-color: #b5bc6d // Green
+$syntax-variable-color: #82a2bd // Blue
 
 // -------------------------------------
 //   Base
