Increase post blockquote font size at l breakpoint

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -19,7 +19,7 @@
     margin-top: $b-space
 
   blockquote
-    +font-size( ( m: 24px ) )
+    +font-size( ( l: 24px ) )
     background: $c-highlight
     border-left: 10px solid $c-highlight
     box-sizing: border-box
