Decrease line height on narrow screens

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -14,6 +14,9 @@ html
   line-height: $b-lineHeight
   word-spacing: em( 1px )
 
+  +respond-to($g-m)
+    line-height: $b-lineHeight--m
+
 body
   +font-size( ( m: $b-fontSize--m ) )
 
