--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -124,7 +124,8 @@ $b-fontSize: 18px
 $b-fontSize--m: 20px
 $b-fontSize-s: 14px
 $b-fontSize-s--m: 16px
-$b-lineHeight: 1.5
+$b-lineHeight: 1.4
+$b-lineHeight--m: 1.5
 
 // ----- Sizing ----- //
 
