Change bold font weights to 600

--- a/source/assets/stylesheets/components/_button.sass
+++ b/source/assets/stylesheets/components/_button.sass
@@ -21,7 +21,7 @@
   cursor: pointer
   display: inline-block
   font-family: $b-fontFamily-mono
-  font-weight: bold
+  font-weight: $b-fontWeight-bold
   letter-spacing: 2px
   line-height: $btn-height
   margin-right: $btn-pseudo-width
