--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -9,7 +9,7 @@
   +font-size-s
   color: $label-color
   font-family: $b-fontFamily-mono
-  font-weight: bold
+  font-weight: $b-fontWeight-bold
   letter-spacing: em( 2px )
   text-transform: uppercase
 
