--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -24,7 +24,7 @@
 
 .link--inverted
   color: $link--inverted-color
-  font-weight: bold
+  font-weight: $b-fontWeight-bold
 
   +state
     color: $link--inverted--state-color
