--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -120,7 +120,7 @@
 // ----- Lead ----- //
 
 .post-lead
-  font-weight: bold
+  font-weight: $b-fontWeight-bold
   letter-spacing: 0.1em
   opacity: 0.95
   text-transform: uppercase
