--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -63,7 +63,7 @@ h2, .h2
 
 a, %a
   color: $link-color
-  font-weight: bold
+  font-weight: $b-fontWeight-bold
   text-decoration: none
   transition: $b-transition
 
