Fix palette tool class name

--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -5,7 +5,7 @@
   %body
     = partial 'shared/header'
 
-    %section.row.bc--shark
+    %section.row.bc-shark
       .cell.well.well--l
         .tci
           %time.label.label--invert.dib.mbm= pretty_date( current_page.data.date )
