Add border-invert variable and tool

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -24,6 +24,15 @@
   background: $shark
 
 // -------------------------------------
+//   Borders
+// -------------------------------------
+
+// ----- Invert ----- //
+
+.bdrti
+  border-top: $b-border-invert
+
+// -------------------------------------
 //   Display
 // -------------------------------------
 
