--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -45,6 +45,7 @@ $orchid: #86609f
 $c-background: $alabaster
 $c-background-dark: darken( $c-background, 5% )
 $c-border: lighten( $quill, 5% )
+$c-border-invert: rgba( $white, 0.1 )
 $c-highlight: $orchid
 $c-subdue: darken( $quill, 25% )
 $c-text-invert: $alabaster
@@ -109,6 +110,7 @@ $b-borderRadius: 5px
 $b-borderStyle: solid
 $b-borderWidth: 4px
 $b-border: $b-borderWidth $b-borderStyle $c-border
+$b-border-invert: $b-borderWidth $b-borderStyle $c-border-invert
 $b-boxShadow: 0 2px 0 rgba( $c-text, 0.25 )
 
 // ----- Transitions ----- //
