Make label block-level elements by default

--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -8,6 +8,7 @@
 .label
   +font-size-s
   color: $label-color
+  display: block
   font-family: $b-fontFamily-mono
   font-weight: $b-fontWeight-bold
   letter-spacing: em( 2px )
