--- a/source/index.haml
+++ b/source/index.haml
@@ -11,7 +11,7 @@ description: 'Front-end Developer at Code School'
 
           .tac
             = image_tag 'avatar.jpg', class: 'thumb dib mbs', width: 140, height: 140
-            %p.label.label--invert.mbf John D. Jameson
+            %span.label.label--invert.mbf John D. Jameson
             %p
               Front-end Devloper at
               %span.db
