--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -77,8 +77,14 @@
 
 +respond-to( $g-m )
 
-  .mbn--m
+  .mbf--m
     margin-bottom: 0
+
++respond-to($g-m)
+
+  .mbxl--m
+    margin-bottom: $b-space-xl
+
 
 // ----- Horizontal ----- //
 
