--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -18,13 +18,13 @@
 
           .g.sector
             .g-b.g-b--l--2of3.sector-item.sector-item--a.sector-item--a--invert
-              .well.well--l.prs--l
+              .well.well--l.mbxl--m.prs--l
                 .cell.cell--s
 
                   = find_and_preserve do
                     = yield
 
             .g-b.g-b--l--1of3.sector-item.sector-item--b.sector-item--b--invert.dn.db--l
-              .well.well--l
+              .well.well--l.mbxl--m
 
     = partial 'shared/footer'
