Update footer site repo link

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -37,7 +37,7 @@
     .bdrti.ptm
       %p.mbf.tss
         Check out my site’s source code on
-        = link_to 'GitHub', 'https://github.com/johndjameson', class: 'link link--bordered link--inverted'
+        = link_to 'GitHub', 'https://github.com/johndjameson/johndjameson.com', class: 'link link--bordered link--inverted'
 
 = javascript_include_tag 'vendor'
 = javascript_include_tag 'application'
