Add invert modifier to footer labels

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -4,7 +4,7 @@
     .split.split--responsive
       .split-cell.mrl
 
-        %span.label Built with
+        %span.label.label--invert Built with
 
         .well.well--l
           .g
@@ -22,7 +22,7 @@
 
       .split-cell
 
-        %span.label Online
+        %span.label.label--invert Online
 
         .well.well--l
 
