Fix sidenote context line height percentage

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -65,6 +65,9 @@
   line-height: percentage( $b-lineHeight )
   position: relative
 
+  +respond-to($g-m)
+    line-height: percentage( $b-lineHeight--m )
+
 // ----- Sidenotes ----- //
 
 .has-sidenotes
