Update MVCSS to v4.0.10
Refs #1

--- a/source/assets/stylesheets/components/_sector.sass
+++ b/source/assets/stylesheets/components/_sector.sass
@@ -9,9 +9,14 @@
 // -------------------------------------
 //
 // .has-sector
-//   .sector
-//     .sector-item[.sector-item--a|b|...]
-//     .sector-item[.sector-item--a|b|...]
+//
+// .sector
+//
+//   .sector-item[a|b invert]
+//     / ...
+//
+//   .sector-item[a|b invert]
+//     / ...
 //
 // *************************************
 
