--- a/source/assets/stylesheets/components/_thumb.sass
+++ b/source/assets/stylesheets/components/_thumb.sass
@@ -7,13 +7,9 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// %img.thumb{ src: '', alt: '' }
+// %img.thumb
 //
 // *************************************
-
-// -------------------------------------
-//   Base
-// -------------------------------------
 
 .thumb
   border-radius: 50%
