--- a/source/assets/stylesheets/structures/_figure.sass
+++ b/source/assets/stylesheets/structures/_figure.sass
@@ -3,6 +3,14 @@
 //   Figure
 //   -> Annotated image blocks
 //
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .figure
+//   %img.figure-image
+//   .figure-caption
+//
 // *************************************
 
 .figure
