--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -3,6 +3,12 @@
 //   Label
 //   -> Supplementary text
 //
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .label[invert]
+//
 // *************************************
 
 .label
