--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -3,6 +3,12 @@
 //   Link
 //   -> Actionable Text
 //
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .link[bordered inverted]
+//
 // *************************************
 
 .link
