--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -1,7 +1,13 @@
 // *************************************
 //
 //   Post
-//   -> Markdown-compiled blog post
+//   -> Markdown-compiled article
+//
+// -------------------------------------
+//   Template (Haml)
+// -------------------------------------
+//
+// .post[...]
 //
 // *************************************
 
