--- a/source/assets/stylesheets/components/_button.sass
+++ b/source/assets/stylesheets/components/_button.sass
@@ -8,7 +8,7 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// %a.btn
+// .btn
 //
 // *************************************
 
