--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -43,17 +43,17 @@ h3, .h3,
 h4, .h4
   font-family: $b-fontFamily-heading
   font-weight: normal
-  line-height: 1.2
   letter-spacing: em( 2px )
+  line-height: 1.2
   margin-bottom: $b-space-xs
   margin-top: 0
   text-transform: uppercase
 
 h1, .h1
-  +font-size( ( b: 30px, m: 45px, l: 68px ) )
+  +font-size( ( b: $b-fontSize-h1, m: $b-fontSize-h1--m, l: $b-fontSize-h1--l ) )
 
 h2, .h2
-  +font-size( ( b: 20px, m: 30px ) )
+  +font-size( ( b: $b-fontSize-h2, m: $b-fontSize-h2--m ) )
 
 // -------------------------------------
 //   Inline Content
