--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -126,6 +126,11 @@ $b-fontSize: 18px
 $b-fontSize--m: 20px
 $b-fontSize-s: 14px
 $b-fontSize-s--m: 16px
+$b-fontSize-h1: 30px
+$b-fontSize-h1--m: 45px
+$b-fontSize-h1--l: 68px
+$b-fontSize-h2: 20px
+$b-fontSize-h2--m: 30px
 $b-fontWeight-bold: 600
 $b-lineHeight: 1.4
 $b-lineHeight--m: 1.5
