Move view links into a data file
Closes #3

--- a/source/index.haml
+++ b/source/index.haml
@@ -15,7 +15,7 @@ description: 'Front-end Developer at Code School'
             %p
               Front-end Devloper at
               %span.db
-                = link_to 'Code School', 'https://www.codeschool.com/',
+                = link_to 'Code School', links.codeschool,
                   class: 'link link--bordered link--inverted'
 
       .g-b.g-b--m--2of3.sector-item.sector-item--b
