--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -8,6 +8,6 @@
       .split-cell
         %p.mbf.tci.tss
           Built with
-          = link_to 'MVCSS', 'http://mvcss.io/', class: 'link link--bordered link--inverted'
+          = link_to 'MVCSS', links.mvcss, class: 'link link--bordered link--inverted'
           and
-          = link_to 'Middleman', 'http://middlemanapp.com/', class: 'link link--bordered link--inverted'
+          = link_to 'Spellbook', links.spellbook, class: 'link link--bordered link--inverted'
