Update MVCSS version number

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -1,6 +1,6 @@
 // *************************************
 //
-//   johndjameson.com - MVCSS v4.0.7
+//   johndjameson.com - MVCSS v4.0.10
 //   -> Manifest
 //
 // *************************************
@@ -41,3 +41,5 @@
 // -------------------------------------
 //   Inbox
 // -------------------------------------
+
+// ...
