Add screen reader text
Closes #2

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -28,10 +28,13 @@
 
           .dif
             = link_to links.twitter do
+              %span.srt Twitter
               = image_tag 'icon-twitter.svg', class: 'mrs', width: 40, height: 40
             = link_to links.github do
+              %span.srt GitHub
               = image_tag 'icon-github.svg', class: 'mrs', width: 40, height: 40
             = link_to links.dribbble do
+              %span.srt Dribbble
               = image_tag 'icon-dribbble.svg', class: 'mrs', width: 40, height: 40
 
     .bdrti.ptm
