Reduce index blog section responsive spacing

--- a/source/index.haml
+++ b/source/index.haml
@@ -29,7 +29,7 @@ description: 'Front-end Developer at Code School'
 
           = link_to 'Read It', post.url, class: 'btn'
 
-%section.row.mbl
+%section.row.mbm--m
   .cell.well.well--l
 
     %h2.label.mbl Blog
