Specify normal font weight in base variable

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -42,7 +42,7 @@ h2, .h2,
 h3, .h3,
 h4, .h4
   font-family: $b-fontFamily-heading
-  font-weight: normal
+  font-weight: $b-fontWeight-normal
   letter-spacing: em( 2px )
   line-height: 1.2
   margin-bottom: $b-space-xs
