--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -268,6 +268,6 @@
 // ----- Weight ----- //
 
 .twn
-  font-weight: normal
+  font-weight: $b-fontWeight-normal
 .twb
   font-weight: $b-fontWeight-bold
