Update Grid component to use flexbox

--- a/source/assets/stylesheets/components/_grid.sass
+++ b/source/assets/stylesheets/components/_grid.sass
@@ -19,34 +19,22 @@
 //
 // *************************************
 
-// -------------------------------------
-//   Base
-// -------------------------------------
-
 #{$g-selector}g
-  @extend .group
-  display: block
+  display: flex
+  flex-wrap: wrap
   margin-left: -$g-gutter / 2
   margin-right: -$g-gutter / 2
 
+// -------------------------------------
+//   Scaffolding
+// -------------------------------------
+
 #{$g-selector}g-b
   box-sizing: border-box
-  float: left
   margin: 0
   padding-left: $g-gutter / 2
   padding-right: $g-gutter / 2
   width: 100%
-
-// -------------------------------------
-//   Modifiers
-// -------------------------------------
-
-// ----- Center ----- //
-
-#{$g-selector}g-b--center
-  display: block
-  float: none
-  margin: 0 auto
 
 // -------------------------------------
 //   Setup
