Remove redundant spacing variables

--- a/source/assets/stylesheets/components/_list.sass
+++ b/source/assets/stylesheets/components/_list.sass
@@ -27,7 +27,7 @@
 
   > .list-item
     border-bottom: $list-border
-    padding-bottom: $list-space
+    padding-bottom: $b-space
 
     &:last-child
       border-bottom: 0
@@ -41,7 +41,7 @@
 
 .list-item
   display: block
-  margin-bottom: $list-space
+  margin-bottom: $b-space
 
   &:last-child
     margin-bottom: 0
