--- a/source/assets/stylesheets/components/_pillar.sass
+++ b/source/assets/stylesheets/components/_pillar.sass
@@ -15,5 +15,5 @@
 .pillar
   border-bottom: $pillar-border
   border-top: $pillar-border
-  padding-bottom: $pillar-space
-  padding-top: $pillar-space
+  padding-bottom: $b-space
+  padding-top: $b-space
