Update Button component to use rem units

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -162,13 +162,13 @@ $btn-fontSize: 16px
 
 // Sizing
 
-$btn-height: 50px
-$btn-space: 20px
+$btn-height: rem( 50px )
+$btn-space: rem( 20px )
 $btn-space-s: $btn-space * 0.5
 
 // Psuedo Element
 
-$btn-pseudo-width: 40px
+$btn-pseudo-width: rem( 40px )
 
 // ----- Grid ----- //
 
