--- a/source/assets/stylesheets/foundation/_helpers.sass
+++ b/source/assets/stylesheets/foundation/_helpers.sass
@@ -37,6 +37,19 @@
 //   Mixins
 // -------------------------------------
 
+// ----- Action ----- //
+// -> Sets clickable element defaults
+
+=action
+  border: 0
+  cursor: pointer
+  display: inline-block
+  text-align: center
+  text-decoration: none
+  transition: $b-transition
+  user-select: none
+  white-space: nowrap
+
 // ----- Font Size ----- //
 // -> Calculates responsive font sizes in rems
 //
