Add media modifiers to Link structure

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -205,3 +205,12 @@ $row-gutter--m: rem( 20px )
 // ----- Thumb ----- //
 
 $thumb-borderRadius: 4px
+
+// -------------------------------------
+//   Structures
+// -------------------------------------
+
+// ----- Link ----- //
+
+$link-borderStyle: solid
+$link-borderWidth: 2px
