--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -7,7 +7,7 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// .link[bordered inverted]
+// .link[bordered inverted media[inverted]]
 //
 // *************************************
 
@@ -21,7 +21,7 @@
 // ----- Bordered ----- //
 
 .link--bordered
-  border-bottom: em( 2px ) solid currentColor
+  border-bottom: $link-borderWidth $link-borderStyle currentColor
 
   +state
     border-bottom-color: currentColor
@@ -34,3 +34,41 @@
 
   +state
     color: $link--inverted--state-color
+
+// ----- Media ----- //
+
+.link--media
+  position: relative
+
+  &::before
+    border-bottom: 0 $link-borderStyle $link--state-color
+    content: ''
+    height: 0
+    left: 0
+    position: absolute
+    top: calc( 100% + #{ $link-borderWidth * 2 } )
+    transition: 0.15s steps( #{ $link-borderWidth / 1px } )
+    width: 100%
+
+  > img
+    transition: $b-transition
+
+  +state
+
+    &::before
+      border-bottom-width: $link-borderWidth
+
+    > img
+      opacity: 0.75
+
+// Inverted
+
+.link--media--inverted
+
+  &::before
+    border-bottom-color: $link--inverted--state-color
+
+  +state
+
+    > img
+      opacity: 0.5
