Integrate footer image link styles

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -10,14 +10,14 @@
           .g
             .g-b.g-b--m--1of2.mbm.mbf--m
 
-              = link_to links.mvcss, class: 'dib mrm' do
+              = link_to links.mvcss, class: 'dib mrm link link--inverted link--media link--media--inverted' do
                 = image_tag 'mvcss-logo.svg', alt: 'MVCSS', width: 110
 
               = link_to 'MVCSS', links.mvcss, class: 'link link--bordered link--inverted'
 
             .g-b.g-b--m--1of2
 
-              = link_to links.spellbook, class: 'dib mrm' do
+              = link_to links.spellbook, class: 'dib mrm link link--inverted link--media link--media--inverted' do
                 = image_tag 'spellbook-logo.svg', alt: 'Spellbook', width: 110
 
               = link_to 'Spellbook', links.spellbook, class: 'link link--bordered link--inverted'
@@ -29,17 +29,17 @@
         .well.well--l
 
           .dif
-            = link_to links.twitter do
+            = link_to links.twitter, class: 'link link--inverted link--media link--media--inverted mrs' do
               %span.srt Twitter
-              = image_tag 'icon-twitter.svg', class: 'mrs', width: 40, height: 40
+              = image_tag 'icon-twitter.svg', width: 40, height: 40
 
-            = link_to links.github do
+            = link_to links.github, class: 'link link--inverted link--media link--media--inverted mrs' do
               %span.srt GitHub
-              = image_tag 'icon-github.svg', class: 'mrs', width: 40, height: 40
+              = image_tag 'icon-github.svg', width: 40, height: 40
 
-            = link_to links.dribbble do
+            = link_to links.dribbble, class: 'link link--inverted link--media link--media--inverted mrs' do
               %span.srt Dribbble
-              = image_tag 'icon-dribbble.svg', class: 'mrs', width: 40, height: 40
+              = image_tag 'icon-dribbble.svg', width: 40, height: 40
 
     .bdrti.ptm
       %p.mbf.tss
