--- a/source/index.haml
+++ b/source/index.haml
@@ -38,6 +38,6 @@ description: 'Front-end Developer at Code School'
       - get_posts().drop( 1 ).each do | post |
         %li.list-item.split.split--responsive
           .split-cell.prs
-            = link_to post.data.title, post.url, class: 'link'
+            = link_to post.data.title, post.url
           .split-cell
             %time.label= pretty_date( post.data.date )
