Update Link structure to use strip-units mixin

--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -47,7 +47,7 @@
     left: 0
     position: absolute
     top: calc( 100% + #{ $link-borderWidth * 2 } )
-    transition: 0.15s steps( #{ $link-borderWidth / 1px } )
+    transition: 0.15s steps( #{ strip-units( $link-borderWidth ) } )
     width: 100%
 
   > img
