Update footer image link classes

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -10,14 +10,14 @@
           .g
             .g-b.g-b--m--1of2.mbm.mbf--m
 
-              = link_to links.mvcss, class: 'dib mrm link link--inverted link--media link--media--inverted' do
+              = link_to links.mvcss, class: 'link link--inverted link--media link--media--inverted mrm' do
                 = image_tag 'mvcss-logo.svg', alt: 'MVCSS', width: 110
 
               = link_to 'MVCSS', links.mvcss, class: 'link link--bordered link--inverted'
 
             .g-b.g-b--m--1of2
 
-              = link_to links.spellbook, class: 'dib mrm link link--inverted link--media link--media--inverted' do
+              = link_to links.spellbook, class: 'link link--inverted link--media link--media--inverted mrm' do
                 = image_tag 'spellbook-logo.svg', alt: 'Spellbook', width: 110
 
               = link_to 'Spellbook', links.spellbook, class: 'link link--bordered link--inverted'
