Update Link component description

--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -1,7 +1,7 @@
 // *************************************
 //
 //   Link
-//   -> Actionable Text
+//   -> Actionable text
 //
 // -------------------------------------
 //   Template (Haml)
