Add inline icon partial to layouts

--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -3,6 +3,9 @@
   = partial 'shared/head'
 
   %body
+    .dn
+      = partial 'assets/images/icons/icons.svg'
+
     = partial 'shared/header'
 
   %main{ role: 'main' }
