--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -30,16 +30,13 @@
 
           .dif
             = link_to links.twitter, class: 'link link--inverted link--media link--media--inverted mrs' do
-              %span.srt Twitter
-              = image_tag 'icon-twitter.svg', width: 40, height: 40
+              = partial 'shared/icon', locals: { name: 'twitter' }
 
             = link_to links.github, class: 'link link--inverted link--media link--media--inverted mrs' do
-              %span.srt GitHub
-              = image_tag 'icon-github.svg', width: 40, height: 40
+              = partial 'shared/icon', locals: { name: 'github' }
 
             = link_to links.dribbble, class: 'link link--inverted link--media link--media--inverted mrs' do
-              %span.srt Dribbble
-              = image_tag 'icon-dribbble.svg', width: 40, height: 40
+              = partial 'shared/icon', locals: { name: 'dribbble' }
 
     .bdrti.ptm
       %p.mbf.tss
