Remove unnecessary component border variables

--- a/source/assets/stylesheets/components/_pillar.sass
+++ b/source/assets/stylesheets/components/_pillar.sass
@@ -13,7 +13,7 @@
 // *************************************
 
 .pillar
-  border-bottom: $pillar-border
-  border-top: $pillar-border
+  border-bottom: $b-border
+  border-top: $b-border
   padding-bottom: $b-space
   padding-top: $b-space
