--- a/source/assets/stylesheets/components/_list.sass
+++ b/source/assets/stylesheets/components/_list.sass
@@ -26,7 +26,7 @@
 .list--divided
 
   > .list-item
-    border-bottom: $list-border
+    border-bottom: $b-border
     padding-bottom: $b-space
 
     &:last-child
