Change palete and background color variables

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -19,24 +19,19 @@
 
 // ----- Palette ----- //
 
-// Black
+// Grayscale
 
 $black: #000
-
-// Gray - dark to light
-
-$shark: #222
 $heavyMetal: #2c2c2c
 $masala: #3c3b3d
 $quill: #e2e2e0
-
-// White
-
 $alabaster: #f8f8f7
 $white: #fff
 
 // Purple
 
+$balticSea: #1f1d23
+$shark: #232128
 $majesty: #705c99
 $orchid: #86609f
 
@@ -60,19 +55,10 @@ $btn-background: $c-highlight
 $btn-color: $c-text-invert
 $btn--state-background: darken( $btn-background, 10% )
 
-// Pillar
-
-$pillar-borderColor: $c-border
-
-// Row
-
-$row--a-background: $orchid
-$row--b-background: $majesty
-
 // Sector
 
-$sector-item--a-background: $heavyMetal
-$sector-item--b-background: $shark
+$sector-item--a-background: $shark
+$sector-item--b-background: $balticSea
 $sector-item--a--invert-background: $c-background
 $sector-item--b--invert-background: darken( $c-background, 5% )
 
@@ -92,7 +78,7 @@ $link--inverted--state-color: rgba( $link--inverted-color, 0.5 )
 
 // Syntax
 
-$syntax-background: $shark
+$syntax-background: $balticSea
 $syntax-color: #e0e0e0 // White
 $syntax-comment-color: #969896 // Gray
 $syntax-constant-color: #ca6768 // Red
