--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -20,8 +20,8 @@
 
 // ----- Palette ----- //
 
-.bc-shark
-  background: $shark
+.bc-balticSea
+  background: $balticSea
 
 // -------------------------------------
 //   Borders
