--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -10,7 +10,7 @@
 
   %main{ role: 'main' }
 
-    %section.row.bc-shark
+    %section.row.bc-balticSea
       .cell.well.well--l
         .tci
           %time.label.label--invert.dib.mbm= pretty_date( current_page.data.date )
