--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -1,4 +1,4 @@
-%footer.row.bc-shark.tci{ role: 'contentinfo' }
+%footer.row.bc-balticSea.tci{ role: 'contentinfo' }
   .cell.well.well--l
 
     .g
