Update and apply Label component inverted styles

--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -24,7 +24,7 @@
 //   Modifiers
 // -------------------------------------
 
-// ----- Invert ----- //
+// ----- Inverted ----- //
 
-.label--invert
+.label--inverted
   color: $label--invert-color
