--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -13,7 +13,7 @@
     %section.row.bc-balticSea
       .cell.well.well--l
         .tci
-          %time.label.label--invert.dib.mbm= pretty_date( current_page.data.date )
+          %time.label.label--inverted.dib.mbm= pretty_date( current_page.data.date )
           %h1{ class: ( 'js-orphan' unless current_page.data.allow_orphan ) }= current_page.data.title
           %p.mbf.tcis.tsi.tsl.js-orphan= current_page.data.description
 
