--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -4,7 +4,7 @@
     .g
       .g-b.g-b--m--2of3
 
-        %span.label.label--invert Built with
+        %span.label.label--inverted Built with
 
         .well.well--l
           .g
@@ -24,7 +24,7 @@
 
       .g-b.g-b--m--1of3
 
-        %span.label.label--invert Online
+        %span.label.label--inverted Online
 
         .well.well--l
 
