Saturate base highlight color

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -32,8 +32,7 @@ $white: #fff
 
 $balticSea: #1f1d23
 $shark: #232128
-$majesty: #705c99
-$orchid: #86609f
+$trendyPink: #865ea1
 
 // ----- Base ----- //
 
@@ -41,7 +40,7 @@ $c-background: $alabaster
 $c-background-dark: darken( $c-background, 5% )
 $c-border: lighten( $quill, 4% )
 $c-border-invert: rgba( $white, 0.1 )
-$c-highlight: $orchid
+$c-highlight: $trendyPink
 $c-subdue: darken( $quill, 25% )
 $c-text-invert: $alabaster
 $c-text-invert-subdue: rgba( $c-text-invert, 0.65 )
