Punctuate footer sentence

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -44,7 +44,7 @@
     .bdrti.ptm
       %p.mbf.tss
         Check out my site’s source code on
-        = link_to 'GitHub', links.source, class: 'link link--bordered link--inverted'
+        #{ link_to 'GitHub', links.source, class: 'link link--bordered link--inverted' }.
 
 = javascript_include_tag 'vendor'
 = javascript_include_tag 'application'
